src/widgets/snapshots/tvision__widgets__input_line__tests__snapshot_basic_field.snap
---
source: src/widgets/input_line.rs
expression: render(&mut il)
---
size: 12x1
cursor: hidden
text:
| hello      |
attr:
|aaaaaaaaaaaa|
legend:
  . default
  a fg=BIOS(0) bg=BIOS(3)
