src/widgets/snapshots/tvision__widgets__input_line__tests__snapshot_scrolled_both_arrows.snap
---
source: src/widgets/input_line.rs
expression: render(&mut il)
---
size: 8x1
cursor: hidden
text:
|◄efghij►|
attr:
|abbbbbba|
legend:
  . default
  a fg=BIOS(10) bg=BIOS(1)
  b fg=BIOS(15) bg=BIOS(1)
