src/widgets/snapshots/tvision__widgets__input_line__tests__snapshot_scrolled_selection_from_start.snap
---
source: src/widgets/input_line.rs
expression: snap
---
size: 8x1
cursor: hidden
text:
|◄efghij►|
attr:
|abbbbbba|
legend:
  . default
  a fg=BIOS(10) bg=BIOS(1)
  b fg=BIOS(15) bg=BIOS(2)
