src/widgets/snapshots/tvision__widgets__input_line__tests__snapshot_with_selection.snap
---
source: src/widgets/input_line.rs
expression: render(&mut il)
---
size: 12x1
cursor: hidden
text:
| hello      |
attr:
|aabbbaaaaaaa|
legend:
  . default
  a fg=BIOS(0) bg=BIOS(3)
  b fg=BIOS(15) bg=BIOS(2)
